简单弄完了wap上面的第一个环节，解决了特效btn的一些bug，但是也存在一些问题，比如说surfaceview跳转的卡顿还有可调节进度条适配分辨率问题。之后显示程序流量使用的UI

--- a/Msafe/MSafe/res/drawable-hdpi/progress_line.xml
+++ b/Msafe/MSafe/res/drawable-hdpi/progress_line.xml
@@ -6,7 +6,7 @@
         <shape>
             <corners android:radius="10dp" />
  
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/gray_mainactivity_btn_press" />
         </shape>
     </item>
  
