--- a/Msafe/MSafe/res/layout/rubbish_show_itemlayout.xml
+++ b/Msafe/MSafe/res/layout/rubbish_show_itemlayout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <LinearLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/org.com.lix_.ui"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
@@ -99,7 +100,8 @@
             android:paddingLeft="@dimen/padding_list4"
             android:paddingRight="@dimen/padding_list4"
             android:paddingTop="@dimen/padding_list"
-            android:textColor="@color/red" />
+            android:textColor="@color/red"
+            app:title_str="@string/clear" />
     </RelativeLayout>
 
 </LinearLayout>
