--- a/Msafe/MSafe/res/layout/tab_indicator.xml
+++ b/Msafe/MSafe/res/layout/tab_indicator.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-	android:paddingLeft="@dimen/padding_list"
-	android:paddingRight="@dimen/padding_list"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingLeft="@dimen/padding_list"
+    android:paddingRight="@dimen/padding_list" >
 
     <TextView
         android:id="@+id/title"
-        android:layout_marginTop="@dimen/padding_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textSize="@dimen/clear_btn_size"
+        android:layout_marginTop="@dimen/padding_list"
+        android:text="@string/rootamin_title0"
         android:textColor="@drawable/selector_text_color"
-        android:text="@string/rootamin_title0" />
+        android:textSize="@dimen/rubbish_setting_tag_size" />
     <View
-        	android:id="@+id/stoke_line_indito"
-        	android:layout_below="@id/title"
-        	android:visibility="invisible"
-        	android:layout_marginTop="@dimen/padding_list"
-            android:layout_width="wrap_content" 
-            android:background="@color/tab_textcolor_selected"
-            android:layout_height="2dp" />
+        android:id="@+id/stoke_line_indito"
+        android:layout_width="wrap_content"
+        android:layout_height="2dp"
+        android:layout_below="@id/title"
+        android:layout_marginTop="@dimen/padding_list"
+        android:background="@color/tab_textcolor_selected"
+        android:visibility="invisible" />
+
 </RelativeLayout>
