--- a/Msafe/MSafe/res/layout/wapadmin.xml
+++ b/Msafe/MSafe/res/layout/wapadmin.xml
@@ -52,7 +52,7 @@
                     android:id="@android:id/tabcontent"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content" >
-
+					
                     <android.support.v4.view.ViewPager
                         android:id="@+id/wap_viewPager"
                         android:layout_width="fill_parent"
@@ -67,6 +67,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:visibility="visible"
             android:orientation="vertical">
 
             <TextView
@@ -100,6 +101,7 @@
             android:id="@+id/wap_tag0"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
+            android:visibility="visible"
             android:orientation="vertical">
 
             <org.com.lix_.plugin.SinkingView
