fragment声明周期需要继续研究，明天继续研究

--- a/Msafe/MSafe/res/layout/wapadmin_netdetail.xml
+++ b/Msafe/MSafe/res/layout/wapadmin_netdetail.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="horizontal"
-        android:visibility="invisible" >
+        android:visibility="visible" >
 
         <ProgressBar
             android:id="@+id/apkadmin_tip_pro"
