--- a/Msafe/MSafe/res/layout/tabchild_rootstart.xml
+++ b/Msafe/MSafe/res/layout/tabchild_rootstart.xml
@@ -11,6 +11,15 @@
         android:id="@+id/tab_child_tab"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical" />
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/root_start_loading"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="@dimen/padding_list2_tagimg"
+            android:gravity="center"
+            android:text="@string/scan_txt" />
+    </LinearLayout>
 
 </ScrollView>
