--- a/Msafe/MSafe/res/layout/virvusadmin.xml
+++ b/Msafe/MSafe/res/layout/virvusadmin.xml
@@ -35,8 +35,8 @@
                 android:layout_height="@dimen/padding_list2_tagimg"
                 android:layout_alignParentRight="true"
                 android:clickable="true"
-                android:paddingTop="@dimen/padding_list_helf_tri"
                 android:paddingRight="@dimen/padding_list3"
+                android:paddingTop="@dimen/padding_list_helf_tri"
                 android:src="@drawable/setting" />
 
             <LinearLayout
@@ -48,28 +48,39 @@
                 <RelativeLayout
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="7" >
+                    android:layout_weight="1" >
+
+                    <TextView
+                        android:id="@+id/virvus_scan_result_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="@string/duihao"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/main_scan_padding1"
+                        android:visibility="invisible" />
 
                     <org.com.lix_.plugin.RadarCircleView
+                        android:id="@+id/virvus_radar"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         app:stokeSize="10dp" />
 
                     <TextView
                         android:id="@+id/virvus_des_pro"
-                        android:layout_alignParentBottom="true"
-                        android:textColor="@color/virvus_des_pro" 
-                        android:textSize="@dimen/padding_list"
-                        android:layout_marginBottom="@dimen/padding_list_helf"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true" />
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="@dimen/padding_list_helf"
+                        android:textColor="@color/virvus_des_pro"
+                        android:textSize="@dimen/padding_list" />
                 </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="8"
+                    android:layout_weight="1"
                     android:background="@color/white"
                     android:orientation="vertical" >
 
@@ -109,7 +120,7 @@
                         <!-- 扫描数据 -->
 
                         <TextView
-                            android:id="@+id/scan_rubbish_res"
+                            android:id="@+id/virvus_scan_type0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
@@ -164,6 +175,7 @@
                         <!-- 扫描数据 -->
 
                         <TextView
+                            android:id="@+id/virvus_scan_type1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
@@ -218,6 +230,7 @@
                         <!-- 扫描数据 -->
 
                         <TextView
+                            android:id="@+id/virvus_scan_type2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
@@ -272,6 +285,7 @@
                         <!-- 扫描数据 -->
 
                         <TextView
+                            android:id="@+id/virvus_scan_type3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
@@ -281,7 +295,19 @@
                             android:paddingBottom="@dimen/padding_list_helf"
                             android:paddingTop="@dimen/padding_list_helf"
                             android:text=".." />
+                        <View
+                            android:layout_width="fill_parent"
+                            android:layout_height="@dimen/divider_height_half"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginLeft="@dimen/padding_list"
+                            android:layout_marginRight="@dimen/padding_list"
+                            android:background="@color/gray_mainactivity_btn_press" />
                     </RelativeLayout>
+
+                    <View
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
