--- a/Msafe/MSafe/res/layout/item1_child_tab1.xml
+++ b/Msafe/MSafe/res/layout/item1_child_tab1.xml
@@ -5,7 +5,14 @@
     android:orientation="vertical"
     android:paddingLeft="@dimen/padding_list"
     android:paddingRight="@dimen/padding_list" >
-	<TextView android:id="@+id/no_list" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="扫描不到可用应用"/>
+
+    <TextView
+        android:id="@+id/no_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="扫描不到可用应用"
+        android:visibility="invisible" />
+
     <LinearLayout
         android:id="@+id/init_list"
         android:layout_width="fill_parent"
