--- a/Msafe/MSafe/res/layout/root_child0_item.xml
+++ b/Msafe/MSafe/res/layout/root_child0_item.xml
@@ -2,53 +2,72 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@drawable/list_item_selector"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/padding_list"
     android:paddingTop="@dimen/padding_list" >
 
-    <LinearLayout
-        android:id="@+id/grid_item_rubbish_des"
+    <ImageView
+        android:id="@+id/root_start_image_title"
+        android:layout_width="@dimen/all_item_app_icon_size"
+        android:layout_height="@dimen/all_item_app_icon_size"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/padding_list_helf"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/fileadmin_item_default" />
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/divider_height_half"
+        android:layout_below="@id/root_start_image_title"
+        android:background="@color/gray_mainactivity_btn_press"
+        android:paddingBottom="@dimen/padding_list" />
+
+    <RelativeLayout
+        android:id="@+id/root_start_item_rubbish_des"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/padding_list"
-        android:layout_toRightOf="@id/grid_item_image"
-        android:orientation="horizontal" >
+        android:layout_toRightOf="@id/root_start_image_title"
+        android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/item_name"
+            android:id="@+id/root_startitem_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="@string/grid_item_check0"
-            android:textSize="@dimen/gird_item_up_textsize" />
-    </LinearLayout>
+            android:textColor="@color/black"
+            android:textSize="@dimen/rubbish_setting_title_size" />
+    </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true" >
-
-        <Switch
-            android:id="@+id/switch1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/grid_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+    <RelativeLayout
+        android:id="@+id/rubbish_switch_0"
+        android:layout_width="45dp"
+        android:layout_height="20dp"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/doc_icon" />
+        android:layout_marginRight="@dimen/padding_list2"
+        android:background="@drawable/switch_gray"
+        android:clickable="true" >
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/divider_height"
-        android:layout_below="@id/grid_item_image"
-        android:layout_marginTop="@dimen/padding_list"
-        android:background="@color/gray_mainactivity_btn_press" />
+        <ImageView
+            android:id="@+id/root_start_switch_tag0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/rubbish_setting_divider_height"
+            android:src="@drawable/switch_tag" />
+
+        <ImageView
+            android:id="@+id/root_start_switch_tag1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/rubbish_setting_divider_height"
+            android:src="@drawable/switch_tag"
+            android:visibility="invisible" />
+    </RelativeLayout>
 
 </RelativeLayout>
