--- a/Msafe/MSafe/res/layout/tabchild_root_notification.xml
+++ b/Msafe/MSafe/res/layout/tabchild_root_notification.xml
@@ -6,10 +6,20 @@
     android:paddingLeft="@dimen/padding_list"
     android:paddingRight="@dimen/padding_list" >
 
+    <TextView
+        android:id="@+id/root_notification_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/padding_list1_tagimg"
+        android:text="@string/scan_txt" />
+
     <LinearLayout
+        android:id="@+id/root_notification_total"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:visibility="gone" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -82,12 +92,15 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/root_notification_liview"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/divider_height"
         android:layout_marginTop="@dimen/padding_list"
-        android:background="@color/gray_mainactivity_btn_press" />
+        android:background="@color/gray_mainactivity_btn_press"
+        android:visibility="gone" />
 
     <ScrollView
+        android:id="@+id/root_notification_scrollview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="@dimen/padding_list" >
